UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@import "../../../css/ITJakub.Colors.less";
@import "../../../css/ridics.checkbox.less";
@import "@text-editor-variables.less";
@import "@page-list-editor-vabiables.less";
@import "@editors-common-variables.less";
@import "@image-viewer-variables.less";

@border-color: #ddd;
@box-border: 1px solid @border-color;
@even-table-row-colour: #eee;
@odd-table-row-colour: white;
@selected-row-color: #FFDAB9;

.project-list {
    hr {
        margin-top: 3px;
        margin-bottom: 3px;
    }
}

.project-list-new {
    margin-bottom: 6px;
}

.project-list-header {
}

.project-list-subheader {
    margin-top: 3px;
    margin-bottom: 10px;
    text-align: right;
}

.project-item {
    padding-top: 4px;
    padding-bottom: 4px;

    &:hover {
        background-color: #f0f0f0;
    }
}

#new-project-button {
    margin-right: 4px;
}

.project-item-buttons {
    a {
        display: block;
        float: right;
        text-align: center;
        margin: 7px;
        margin-top: 15px;
    }

    .glyphicon {
        font-size: 170%;
    }
}

.row.display-flex {
    display: flex;
    flex-wrap: wrap;

    & > [class*='col-'] {
        display: flex;
        flex-direction: column;
    }
}

.keytable-container {
    .keytable-row {
        min-height: 16em;
    }

    .vertical-splitter-control {
        display: flex;
        position: relative;
        padding: 0;
        border-left: solid gray 2px;

        button {
            padding: 10px 2px;
            margin-right: 3px;
            position: absolute;
            top: 50%;
            height: 6em;
            margin-top: -3em;
        }
    }
}

.project-layout {
    display: table-row;
}

.project-layout,
.snapshot-layout {
    display: flex;
    flex-wrap: wrap;
    
    .back-button {
        margin-top: -1rem;
        margin-bottom: 0.7rem;
    }

    .left-menu {
        flex-grow: 1;
        flex-shrink: 0;
        flex-basis: 6em;
        margin: 1em;
    }
    
    .parent-item {
        background-color: #f5f5f5;
    }

    .vertical-splitter-control {
        vertical-align: middle;

        button {
            padding: 10px 2px;
            margin-right: 3px;
            transform: scaleY(2);
            margin-top: 30vh;
        }
    }

    .vertical-splitter {
        border: 1px solid #ccc;
    }

    .content {
        min-width: 60%;
        flex-grow: 10;
        flex-basis: 0;
        margin: 1em 1em 1em 0em;
        padding-left: 1em;
    }

    .tab-content {
        border: @box-border;
        border-top-width: 0;
        padding: 1rem 0.5rem 1rem 0.5rem;
    }

    .modal .tab-content {
        height: auto;
        overflow: initial;
        border-width: 0;
        padding: 1rem 0;
    }

    table {
        width: 100%;
    }

    td, th {
        border: @box-border;
        text-align: center;
    }

    th {
        background-color: #eee;
    }
}

.project-title {
    font-weight: bold;
    font-size: 120%;
    margin-bottom: 20px;

    .text-type {
        color: gray;
        font-size: 80%;
    }
}

.resource-panel {
    button, select {
        width: 100%;
        margin-bottom: 3px;
    }
}

.project-bottom-buttons {
    margin-top: 1rem;
    text-align: right;
}

.metadata-edit-bar {
    .project-form-bottom-buttons {
        button {
            float: right;
        }

        .work-metadata-save-button {
            margin-right: -15px;
            margin-left: 1em;
        }

        .alert {
            margin-bottom: 0;
        }
    }

    .form-group {
        margin-bottom: 0;
    }
}

.resource-version-button-icon {
    margin-top: -6px;
    margin-bottom: -8px;
}

.resource-version-panel {
    height: 220px;
    padding-top: 7px;

    > div {
        border: @box-border;
        padding: 0.5rem;
        height: 100%;
    }
}

.resource-tab-row-fix {
    margin-right: 0;
    margin-left: 0;
}

.resource-version-table {
    height: 80%;
    overflow-y: auto;
    padding-right: 2px;
    padding-bottom: 5px;
}

.resource-version-control {
    height: 20%;
    padding-top: 5px;
}

.input-as-text {
    border: none;
    background: transparent !important;
    box-shadow: none;
    cursor: default !important;
}

.project-history-records {
    .panel {
        margin-top: 7px;
        margin-bottom: 7px;
    }

    .snapshot-panel {
        background-color: @breadcrumb-background-color;
    }
}

.project-page-list {
    .image-preview {
        text-align: right;

        img {
            max-width: 100%;
            max-height: 100%;
        }
    }

    .project-bottom-buttons {
        padding-right: 15px;
    }

    .resource-tab-row-fix {
        margin-left: 0;
    }

    > .row > div {
        select {
            height: 100%;
        }
    }

    .main-buttons button {
        margin-bottom: 3px;
    }

    .bottom-buttons {
        position: absolute;
        bottom: 0;
        width: 50px;
    }
}
/* ... */

